--- a/build.gradle
+++ b/build.gradle
@@ -33,11 +33,12 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     implementation fileTree(dir: 'libs', includes: ['*.jar'])
     implementation 'org.litepal.android:core:1.3.2'
-    implementation 'com.squareup.okhttp3:okhttp:3.4.1'
-    implementation 'com.google.code.gson:gson:2.7'
+    implementation 'com.squareup.okhttp3:okhttp:3.10.0'
+    implementation 'com.google.code.gson:gson:2.8.5'
     implementation 'com.github.bumptech.glide:glide:3.7.0'
     implementation 'org.projectlombok:lombok:1.18.8'
     annotationProcessor 'org.projectlombok:lombok:1.18.8'
+    implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.0.0'
 
 
 }
